--- a/style.css
+++ b/style.css
@@ -44,3 +44,18 @@ img {
     margin-top: 1rem;
     object-fit: cover;
 } 
+
+@media screen and (min-width: 1024px) {
+    h1 {
+        font-size: 4.768rem;
+    }
+    h2 {
+        font-size: 3.815rem;
+    }
+    p {
+        font-size: 2.5rem;
+    }
+    ul li {
+        font-size: 2.2rem;
+    }
+}
